@@ -15,12 +15,13 @@ public interface MultipleRelationsRemoveAllTestCommand extends Command<Void> {
         Person person = tx.select(Person.class).where(Person::id).equalsTo(personId());
 
         Company currentCompany = person.worksAt();
-        Company google = tx.select(Company.class).where(Company::name).equalsToOrNull("Google");
-        Company oracle = tx.select(Company.class).where(Company::name).equalsToOrNull("Oracle");
+        Company google = tx.select(Company.class).where(Company::name).equalsTo("Google");
+        Company oracle = tx.select(Company.class).where(Company::name).equalsTo("Oracle");
 
-        tx.update(person) //
-                .onCollection(Person::previousCompanies).removeAll(Arrays.asList(oracle, google, currentCompany)) //
-                .done();
+        tx.update(person).
+                onCollection(Person::previousCompanies).
+                removeAll(List.of(oracle, google, currentCompany)).
+                done();
 
         return null;
     }
